# ood-masters

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
data/: results_20260330_010521.csv
scripts/: k_experiment.py
src/: __init__.py
src/datasets/: __init__.py  medmnist_loader.py
src/evaluation/: __init__.py  kfold_runner.py  metrics.py  runner.py
src/models/: __init__.py  base_extractor.py  cnn.py  cnn_extractor.py  feature_extractor.py  vit.py  vit_extractor.py
src/ood/: __init__.py  base.py  base_detector.py  dbscan_detector.py  dod.py  kmeans_detector.py  umap_projector.py
src/reductors/: __init__.py  base.py  pca.py  random_subspace.py  umap.py
src/training/: __init__.py  feature_pipeline.py
src/visualization/: __init__.py  tsne_plot.py  umap_plot.py
